--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,30 @@
 img {
     max-width: 100%;
     display: block;
+    padding-bottom: 0.5rem;
 }
 
 ul {
     list-style-type: none;
 }
+
+main {
+    background-color: beige;
+}
+
+/* members area */
+#team-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    text-align: center;
+    padding: 2rem;
+    gap: 1rem;
+    row-gap: 2rem;
+}
+
+.team-card {
+    box-shadow: 0 0 10px gray;
+    background-color: white;
+}
+
